# PictureToModel

./: README.md
Literature/: IPP12项目负责人会议.pptx
PicCache/: CMakeCache.txt  CMakeLists.txt  Makefile  PicCache  PicCache.cpp  cmake_install.cmake  new_file
code/: CMakeLists.txt  build.sh  clean.sh
code/data/: rabbit_t.pcd
code/include/: slamBase.h
code/src/: CMakeLists.txt  generatePointCloud.cpp  joinPointCloud.cpp  main.cpp  testICP.cpp  testpcd.cpp
gldemo/: gldemo.pro  main.cpp  mainwindow.cpp  mainwindow.h
test/: CMakeLists.txt
test/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test.cpp
test/src/src/: Makefile
